--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="submit">Submit</button>
     </form>
   </section>
-  <main>
+  <main class='storageBox'>
 
   </main>
   <script src='./Idea.js'></script>
